# zaparoo-label-automator

./: .gitignore  LICENSE  README.md  main.py  mister_supported_cores.csv  notes.md  platforms.csv  pyproject.toml
.github/: copilot-instructions.md
reference_data/: endpoint_config.py  games_by_platform_endpoint.json.j2  igdb.py  igdb_endpoints.json.j2  igdb_platform_endpoints.json  image_config.json  image_config.json.j2
user_files/: endpoints_to_hit_for_each_game.json  mister_supported_cores.csv  notes.md  platforms.csv  platforms.json  platforms_endpoint.json.j2
wrapper/: generic.py  igdb.py  twitch.py
zaparoo_label_automator/: automator.py  catalogue_generator.py  catalogue_generator_old.py  catalogue_template.html  game_endpoint.json  igdb_scraper.py  image_config.json  image_cropper.py  image_downloader.py  label_generator.py  main.py  platform_endpoint.json  platform_logo_selector.py
zaparoo_label_automator/config/: app_config.toml  image_config.json
zaparoo_label_automator/reference_data/: igdb.py  igdb_platform_endpoints.json
zaparoo_label_automator/scraper/: generic.py  platforms.py
zaparoo_label_automator/scrapers/: games.py  generic.py  platforms.py
zaparoo_label_automator/wrapper/: generic.py
zaparoo_label_automator/wrappers/: igdb.py  twitch.py
