[project]
name = "zaparoo-label-automator"
version = "0.1.0"
description = "Automating creation of labels for zaparoo using IGDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "pycountry>=23.12.11",
]

[tool.setuptools.packages.find]
include = ["zaparoo_label_automator*"]
exclude = ["output*", "user_files*"]

[tool.pylint.format]
max-line-length = 120
