[project]
name = "zaparoo-label-automator"
version = "0.1.0"
description = "Automating creation of labels for zaparoo using IGDB"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "pycountry>=23.12.11",
    "Pillow>=10.0.0",
    "cairosvg>=2.7.0",
    "lxml>=4.9.0",
    "weasyprint>=66.0",
    "jinja2>=3.1.6",
]

[tool.setuptools.packages.find]
include = ["zaparoo_label_automator*"]
exclude = ["output*", "user_files*"]

[tool.pylint.format]
max-line-length = 120
